# wifi-aware-photo-feed

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/lauri000/nostrwifiaware/: MainActivitySmokeTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/lauri000/nostrwifiaware/: AndroidNearbyController.kt  AudioDemoCatalog.kt  HashtreeDemoStore.kt  MainActivity.kt  NearbyApp.kt  PhotoDemoStore.kt
app/src/main/java/uniffi/nearby_hashtree_ffi/: nearby_hashtree_ffi.kt
app/src/main/res/xml/: file_paths.xml
docs/: bandwidth-results.md  fips-0001-local-instagram-architecture.md  nearby-hashtree-demo-plan.md  nearby-hashtree-increments.md  release-notes-v0.1.0.md  release-zapstore.md
rust/: Cargo.toml
rust/crates/nearby-hashtree-ffi/: Cargo.toml
rust/crates/nearby-hashtree-ffi/src/: app_core.rs  lib.rs  photo_store.rs  protocol.rs  types.rs
scripts/: build-rust-android.sh  dev-phone.sh  stay-awake.sh
